Modified the Slack channel integration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,5 +41,5 @@ notifications:
   slack:
     rooms:
       # hemajoo is the Slack workplace
-      # travis-foundation is the channel
-      #- hemajoo:lOkFRXlNg0sP7EhvnGUq3gZJ#travis-foundation
+      # travis-gaming is the channel
+      - hemajoo:lOkFRXlNg0sP7EhvnGUq3gZJ#travis-gaming
