--- a/hemajoo-gaming-atlas-client/pom.xml
+++ b/hemajoo-gaming-atlas-client/pom.xml
@@ -52,6 +52,11 @@
 		<artifactId>owner</artifactId>
 	</dependency>
 
+	<dependency>
+		<groupId>com.hemajoo.gaming.atlas</groupId>
+		<artifactId>common</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
   </dependencies>
 
   <url>https://github.com/ressec/hemajoo-gaming</url>
