Updated javafaker dependency to latest version.
Signed-off-by: Resse Christophe <christophe.resse@gmail.com>

--- a/hemajoo-gaming-atlas-common/pom.xml
+++ b/hemajoo-gaming-atlas-common/pom.xml
@@ -52,6 +52,10 @@
 		<artifactId>owner</artifactId>
 	</dependency>
 
+	<dependency>
+		<groupId>com.github.javafaker</groupId>
+		<artifactId>javafaker</artifactId>
+	</dependency>
   </dependencies>
 
   <url>https://github.com/ressec/hemajoo-gaming</url>
