--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ services:
   - postgresql
 
 addons:
-  - postgresql: "9.6"
+  postgresql: "9.6"
+  sonarcloud:
+    organization: "ressec-github"
+    token:
+      secure: "${SONAR_TOKEN}"
 
 cache:
   - $HOME/.m2
@@ -19,7 +23,7 @@ cache:
 
 before_script:
 
-script: mvn clean package -f hemajoo-gaming-atlas-parent/pom.xml
+script: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar -f hemajoo-gaming-atlas-parent/pom.xml
 
 deploy:
   provider: script
