--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
   postgresql: "9.6"
   sonarcloud:
     organization: "ressec-github"
+    projectKey: "ressec_hemajoo-gaming"
     token:
       secure: "${SONAR_TOKEN}"
 
