Changed final artifact names.
Signed-off-by: Resse Christophe <christophe.resse@gmail.com>

--- a/hemajoo-gaming-atlas-model/pom.xml
+++ b/hemajoo-gaming-atlas-model/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>model</artifactId>
+  <artifactId>atlas.model</artifactId>
   <name>Hemajoo's Gaming Atlas Common project</name>
   <parent>
-  	<groupId>com.hemajoo.gaming.atlas</groupId>
+  	<groupId>com.hemajoo.gaming</groupId>
   	<artifactId>parent</artifactId>
   	<version>0.0.1-SNAPSHOT</version>
   	<relativePath>../hemajoo-gaming-atlas-parent</relativePath>
